5_deployment_service_ingress/cluster/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache-deployment
  template:
    metadata:
      labels:
        app: apache-deployment
    spec:
      containers:
      - name: apache
        image: httpd:latest
        ports:
        - containerPort: 80
