5_deployment_service_ingress/cluster/service.yml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  selector:
    app: apache-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
